--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-matplotlib==3.8.0
-pandas==2.1.1
-scikit-learn==1.3.1
-seaborn==0.13.0
-streamlit==1.47.0
-
-
-
+streamlit==1.27.2
+pandas==2.0.3
+scikit-learn==1.3.0
+joblib==1.3.2
+matplotlib==3.7.2
+seaborn==0.12.2
